--- a/mav_control_interface/package.xml
+++ b/mav_control_interface/package.xml
@@ -19,4 +19,5 @@
   <depend>tf</depend>
   <depend>tf_conversions</depend>
   <depend>visualization_msgs</depend>
+  <depend>miner_tools</depend>
 </package>
